# Codegenerator_GetOptGen

./: CMakeLists.txt  Example.xml  README.md  main.cpp  read.cpp  read.h  students.xml  write.cpp  write.h
header/: read.h  write.h
source/: main.cpp  read.cpp  write.cpp
